--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ionicons": "^4.4.4"
+  },
   "devDependencies": {
     "@stencil/core": "~0.13.2"
   },
