--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "ionicons": "^4.4.7"
   },
   "devDependencies": {
-    "@stencil/core": "~0.16.0-0"
+    "@stencil/core": "~0.16.0-0",
+    "@types/jest": "23.3.9",
+    "@types/puppeteer": "1.6.4",
+    "jest": "23.6.0",
+    "jest-cli": "23.6.0",
+    "puppeteer": "1.8.0"
   },
   "repository": {
     "type": "git",
