--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ae-icons-component",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "adaept Icons Component",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -16,15 +16,15 @@
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {
-    "ionicons": "^4.4.7"
+    "ionicons": "^4.4.8"
   },
   "devDependencies": {
-    "@stencil/core": "~0.16.0-5",
-    "@types/jest": "23.3.9",
-    "@types/puppeteer": "1.10.0",
+    "@stencil/core": "~0.16.0",
+    "@types/jest": "23.3.10",
+    "@types/puppeteer": "1.10.1",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
-    "puppeteer": "1.10.0"
+    "puppeteer": "1.11.0"
   },
   "repository": {
     "type": "git",
