--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ae-icons-component",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "adaept Icons Component",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -16,12 +16,12 @@
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {
-    "ionicons": "^4.4.8"
+    "ionicons": "4.5.1"
   },
   "devDependencies": {
-    "@stencil/core": "~0.16.0",
-    "@types/jest": "23.3.10",
-    "@types/puppeteer": "1.10.1",
+    "@stencil/core": "0.16.2-2",
+    "@types/jest": "23.3.11",
+    "@types/puppeteer": "1.11.1",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
     "puppeteer": "1.11.0"
