--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ae-icons-component",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "adaept Icons Component",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -20,8 +20,8 @@
     "ionicons": "4.5.1"
   },
   "devDependencies": {
-    "@stencil/core": "0.16.2-4",
-    "@types/jest": "23.3.11",
+    "@stencil/core": "0.16.2",
+    "@types/jest": "23.3.12",
     "@types/puppeteer": "1.11.1",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
