--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ae-icons-component",
-  "version": "0.0.8",
+  "version": "0.0.10",
   "description": "adaept Icons Component",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -20,7 +20,7 @@
     "ionicons": "4.5.1"
   },
   "devDependencies": {
-    "@stencil/core": "0.16.2",
+    "@stencil/core": "0.17.0-1",
     "@types/jest": "23.3.12",
     "@types/puppeteer": "1.11.1",
     "jest": "23.6.0",
