--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ae-icons-component",
-  "version": "0.9.5",
+  "version": "0.9.7",
   "description": "adaept Icons Component",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
@@ -20,7 +20,7 @@
     "ionicons": "4.6.3"
   },
   "devDependencies": {
-    "@stencil/core": "1.8.0",
+    "@stencil/core": "1.9.0-3",
     "@types/jest": "24.0.23",
     "@types/puppeteer": "1.20.2",
     "jest": "24.9.0",
